update argocd.values testing plugin

--- a/argocd/install/argocd/kustomize/base/files/argocd.values.yaml
+++ b/argocd/install/argocd/kustomize/base/files/argocd.values.yaml
@@ -192,7 +192,7 @@ configs:
     # argocd-cmp-cm
     plugins:
       # --- plugin for replacing placeholders with secrets using argocd-vault-plugin
-      avp-helm-multi:
+      argocd-vault-plugin:
         allowConcurrency: true
         generate:
           command:
@@ -204,7 +204,9 @@ configs:
               elif [[ $ARGOCD_ENV_MANIFEST_TYPE == "helm" ]]; then
                 helm template --version $ARGOCD_ENV_CHART_VERSION --repo $ARGOCD_ENV_HELM_REPO $ARGOCD_ENV_HELM_CHART --name-template $ARGOCD_ENV_HELM_RELEASE_NAME --namespace $ARGOCD_ENV_NAMESPACE -f $ARGOCD_ENV_VALUES_FILE $ARGOCD_ENV_ADDITIONAL_ARGS | argocd-vault-plugin generate -
               elif [[ $ARGOCD_ENV_MANIFEST_TYPE == "helm-oci" ]]; then
-                 helm template $ARGOCD_ENV_HELM_CHART --version $ARGOCD_ENV_CHART_VERSION --name-template $ARGOCD_ENV_HELM_RELEASE_NAME --namespace $ARGOCD_ENV_NAMESPACE ${ARGOCD_ENV_HELM_ARGS} | argocd-vault-plugin generate -
+                helm template $ARGOCD_ENV_HELM_CHART --version $ARGOCD_ENV_CHART_VERSION --name-template $ARGOCD_ENV_HELM_RELEASE_NAME --namespace $ARGOCD_ENV_NAMESPACE ${ARGOCD_ENV_HELM_ARGS} | argocd-vault-plugin generate -
+              elif [[ $ARGOCD_ENV_MANIFEST_TYPE == "kustomize" ]]; then
+                kustomize build . | argocd-vault-plugin generate -
               fi              
   # Argo CD sensitive data
   # Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/user-management/#sensitive-data-and-sso-client-secrets
