--- a/argocd/install/argocd/kustomize/base/files/argocd.values.yaml
+++ b/argocd/install/argocd/kustomize/base/files/argocd.values.yaml
@@ -411,7 +411,9 @@ server:
           - cd.crucible.local
     # -- Uses `server.service.servicePortHttps` instead `server.service.servicePortHttp`
     https: false
-
+  envFrom:
+    - secretRef:
+      name: vault-configuration
   volumeMounts:
     - name: custom-ca-certificates
       mountPath: /etc/ssl/certs/custom-ca-certificates.crt
@@ -444,7 +446,7 @@ repoServer:
   extraContainers: 
     - name: argocd-vault-plugin
       command: [/var/run/argocd/argocd-cmp-server]
-      image: quay.io/argoproj/argocd
+      image: quay.io/argoproj/argocd:v2.12.3
       securityContext:
         runAsNonRoot: true
         runAsUser: 999
@@ -466,6 +468,9 @@ repoServer:
           subPath: custom-ca-certificates.crt
         - mountPath: /tmp
           name: cmp-tmp
+      envFrom:
+        - secretRef:
+          name: vault-configuration
   
   # -- Init containers to add a-v-p to the repo server pods
   initContainers:
