fix typo in base-env and applications - VALUES_FILE variable did not have a value key

--- a/argocd/apps/prod-argo/apps/0-base-env.yaml
+++ b/argocd/apps/prod-argo/apps/0-base-env.yaml
@@ -41,7 +41,7 @@ spec:
             - name: NAMESPACE
               value: '{{app.namespace}}'
             - name: VALUES_FILE
-              name: '{{app.values_file}}'
+              value: '{{app.values_file}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: default
