--- a/argocd/apps/prod-argo/apps/1-applications.yaml
+++ b/argocd/apps/prod-argo/apps/1-applications.yaml
@@ -42,7 +42,7 @@ spec:
             - name: NAMESPACE
               value: '{{app.namespace}}'
             - name: VALUES_FILE
-              name: '{{app.values_file}}'
+              value: '{{app.values_file}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: default
