--- a/argocd/apps/prod-argo/apps/0-base-env.yaml
+++ b/argocd/apps/prod-argo/apps/0-base-env.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-argo.git
+      repoURL: https://crucible.local/gitea/fortress-manifests/fortress-prod-argo.git
       revision: HEAD
       files:
       - path: "apps/0-base/*.json"
@@ -18,7 +18,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-k8s.git
+        repoURL: https://crucible.local/gitea/fortress-manifests/fortress-prod-k8s.git
         targetRevision: '{{app.project_branch}}'
         path: "0-base"
         plugin:
