--- a/argocd/apps/prod-argo/apps/2-monitoring.yaml
+++ b/argocd/apps/prod-argo/apps/2-monitoring.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-argo.git
+      repoURL: https://crucible.local/gitea/fortress-manifests/fortress-prod-argo.git
       revision: HEAD
       files:
       - path: "apps/2-monitoring/*.json"
@@ -19,7 +19,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-k8s.git
+        repoURL: https://crucible.local/gitea/fortress-manifests/fortress-prod-k8s.git
         targetRevision: '{{app.project_branch}}'
         path: "monitoring"
         plugin:
