--- a/argocd/apps/prod-argo/apps/0-base/postgresql.config.json
+++ b/argocd/apps/prod-argo/apps/0-base/postgresql.config.json
@@ -1,6 +1,7 @@
 {
     "app": {
         "project_name" : "postgresql",
+        "project_branch": "HEAD",
         "namespace" : "default",
         "manifest_type": "helm-oci",
         "helm_chart" : "oci://registry-1.docker.io/bitnamicharts/postgresql",
