--- a/argocd/apps/prod-argo/apps/1-applications/blueprint.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/blueprint.config.json
@@ -5,7 +5,7 @@
         "namespace" : "default",
         "manifest_type": "helm",
         "helm_repo" : "https://helm.cmusei.dev/charts",
-        "helm_chart_name" : "blueprint",
+        "helm_chart" : "blueprint",
         "helm_chart_version" : "1.4.1",
 	"values_file" : "blueprint.values.yaml",
         "helm_args" : ""
