--- a/argocd/apps/prod-argo/apps/1-applications/topomojo.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/topomojo.config.json
@@ -5,7 +5,7 @@
         "namespace" : "default",
         "manifest_type": "helm",
         "helm_repo" : "https://helm.cmusei.dev/charts",
-        "helm_chart_name" : "topomojo",
+        "helm_chart" : "topomojo",
         "helm_chart_version" : "0.3.8",
         "values_file" : "topomojo.values.yaml",
 	"helm_args" : ""
