--- a/argocd/apps/prod-argo/apps/0-base/mongodb.config.json
+++ b/argocd/apps/prod-argo/apps/0-base/mongodb.config.json
@@ -6,7 +6,7 @@
         "manifest_type": "helm-oci",
         "helm_chart" : "oci://registry-1.docker.io/bitnamicharts/mongodb",
         "helm_chart_version" : "14.8.0",
-        "repo_url": "",
+        "helm_repo": "",
         "values_file" : "mongodb.values.yaml",
         "helm_args" : ""
     }
