--- a/argocd/apps/prod-argo/apps/0-base/postgresql.config.json
+++ b/argocd/apps/prod-argo/apps/0-base/postgresql.config.json
@@ -6,7 +6,7 @@
         "manifest_type": "helm-oci",
         "helm_chart" : "oci://registry-1.docker.io/bitnamicharts/postgresql",
         "helm_chart_version" : "15.3.3",
-        "repo_url": "",
+        "helm_repo": "",
         "values_file" : "postgresql.values.yaml",
         "helm_args" : ""
     }
