--- a/argocd/apps/prod-argo/apps/1-applications/steamfitter.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/steamfitter.config.json
@@ -5,7 +5,7 @@
         "namespace" : "default",
         "manifest_type": "helm",
         "helm_repo" : "https://helm.cmusei.dev/charts",
-        "helm_chart_name" : "steamfitter",
+        "helm_chart" : "steamfitter",
         "helm_chart_version" : "1.4.2",
         "values_file" : "steamfitter.values.yaml",
         "helm_args" : ""
