API updates for cert-manager

--- a/argocd/apps/prod-k8s/1-applications/blueprint.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/blueprint.values.yaml
@@ -12,13 +12,14 @@ blueprint-api:
       nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
       nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
       nginx.ingress.kubernetes.io/use-regex: "true"
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /blueprint/(api|swagger|hubs)
             pathType: Prefix
     tls:
-      - secretName: appliance-cert
+      - secretName: <path:fortress-prod/data/shared#domain>-tls
         hosts:
          - <path:fortress-prod/data/shared#domain>
 
@@ -645,7 +646,7 @@ blueprint-ui:
           - path: /blueprint(/|$)(.*)
             pathType: Prefix
     tls:
-      - secretName: appliance-cert
+      - secretName: <path:fortress-prod/data/shared#domain>-tls
         hosts:
          - "<path:fortress-prod/data/shared#domain>"
 
@@ -661,16 +662,16 @@ blueprint-ui:
   # some basic configuration
   settings: |-
     {
-      "ApiUrl": "https://fortress.sei.cmu.edu/blueprint",
+      "ApiUrl": "https://crucible.local/blueprint",
       "OIDCSettings": {
-        "authority": "https://fortress.sei.cmu.edu/keycloak/realms/crucible",
+        "authority": "https://crucible.local/keycloak/realms/crucible",
         "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_blueprint-ui",
-        "redirect_uri": "https://fortress.sei.cmu.edu/blueprint/auth-callback",
-        "post_logout_redirect_uri": "https://fortress.sei.cmu.edu/blueprint",
+        "redirect_uri": "https://crucible.local/blueprint/auth-callback",
+        "post_logout_redirect_uri": "https://crucible.local/blueprint",
         "response_type": "code",
         "scope": "openid profile blueprint-api cite-api gallery-api player-api vm-api steamfitter-api",
         "automaticSilentRenew": true,
-        "silent_redirect_uri": "https://fortress.sei.cmu.edu/blueprint/auth-callback-silent"
+        "silent_redirect_uri": "https://crucible.local/blueprint/auth-callback-silent"
       },
       "AppTitle": "Blueprint",
       "AppTopBarHexColor": "#2d69b4",
