--- a/argocd/apps/prod-k8s/1-applications/alloy.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/alloy.values.yaml
@@ -12,13 +12,15 @@ alloy-api:
       nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
       nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
       nginx.ingress.kubernetes.io/use-regex: "true"
+      cert-manager.io/cluster-issuer: ca-issuer
+
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /alloy/(hubs|api|swagger)
             pathType: Prefix
     tls:
-      - secretName: appliance-cert
+      - secretName: <path:fortress-prod/data/shared#domain>-tls
         hosts:
           - <path:fortress-prod/data/shared#domain>
 
