--- a/argocd/apps/prod-k8s/1-applications/steamfitter.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/steamfitter.values.yaml
@@ -10,13 +10,14 @@ steamfitter-api:
       nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
       nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
       nginx.ingress.kubernetes.io/use-regex: "true"
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /steamfitter/(api|swagger|hubs)
             pathType: Prefix
     tls:
-      - secretName: appliance-cert
+      - secretName: <path:fortress-prod/data/shared#domain>-tls
         hosts:
          - <path:fortress-prod/data/shared#domain>
   certificateMap: "appliance-root-ca"
