--- a/argocd/apps/prod-k8s/1-applications/topomojo.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/topomojo.values.yaml
@@ -22,8 +22,9 @@ topomojo-api:
     annotations: 
       nginx.ingress.kubernetes.io/proxy-body-size: 6g
       kubernetes.io/ingress.class: nginx
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
-      - host: fortress.sei.cmu.edu
+      - host: crucible.local
         paths:
           - path: /topomojo/api
             pathType: ImplementationSpecific
@@ -32,7 +33,7 @@ topomojo-api:
           - path: /topomojo/docs
             pathType: ImplementationSpecific
     tls: 
-    - secretName: fortress-tls
+    - secretName: <path:fortress-prod/data/shared#domain>-tls
       hosts:
         - <path:fortress-prod/data/shared#domain>
   
@@ -214,10 +215,10 @@ topomojo-ui:
       "mkshost": "",
       "oidc": {
         "client_id": "fortress_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_topomojo-ui",
-        "authority": "https://fortress.sei.cmu.edu/keycloak/realms/crucible",
-        "redirect_uri": "https://fortress.sei.cmu.edu/topomojo/oidc",
-        "silent_redirect_uri": "https://fortress.sei.cmu.edu/topomojo/oidc-silent.html",
-        "post_logout_redirect_uri": "https://fortress.sei.cmu.edu/topomojo",
+        "authority": "https://crucible.local/keycloak/realms/crucible",
+        "redirect_uri": "https://crucible.local/topomojo/oidc",
+        "silent_redirect_uri": "https://crucible.local/topomojo/oidc-silent.html",
+        "post_logout_redirect_uri": "https://crucible.local/topomojo",
         "response_type": "code",
         "scope": "openid profile topomojo-api",
         "automaticSilentRenew": true,
