--- a/argocd/apps/prod-k8s/bootstrap/argocd.values.yaml
+++ b/argocd/apps/prod-k8s/bootstrap/argocd.values.yaml
@@ -5,7 +5,7 @@
 global:
   # -- Common labels for the all resources
   additionalLabels: {}
-  domain: cd.fortress.sei.cmu.edu
+  domain: cd.crucible.local
   # app: argo-cd
   # -- Number of old deployment ReplicaSets to retain. The rest will be
   # garbage collected.
@@ -193,9 +193,9 @@ configs:
       # -- TLS certificates for Git repositories
       # @default -- `{}` (See [values.yaml])
     certificates: 
-      fortress.sei.cmu.edu: |
+      crucible.local: |
         <ADD CERTS HERE>
-      code.fortress.sei.cmu.edu: |
+      code.crucible.local: |
         <ADD CERT HERE>
       # server.example.com: | -----BEGIN
       # CERTIFICATE----- ...  -----END
@@ -392,7 +392,7 @@ server:
     ## Hostnames must be provided if Ingress is enabled.
     ## Secrets must be manually created in the namespace
     hosts: 
-      - cd.fortress.sei.cmu.edu
+      - cd.crucible.local
     # - argocd.example.com
     # -- List of ingress paths
     paths:
@@ -417,7 +417,7 @@ server:
     tls: 
       - secretName: fortress-tls
         hosts:
-          - cd.fortress.sei.cmu.edu
+          - cd.crucible.local
     # -- Uses `server.service.servicePortHttps` instead `server.service.servicePortHttp`
     https: false
 
