--- a/argocd/apps/prod-k8s/1-applications/cite.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/cite.values.yaml
@@ -71,6 +71,7 @@ cite-api:
       nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
       nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
       nginx.ingress.kubernetes.io/use-regex: "true"
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
         paths:
