--- a/argocd/apps/prod-k8s/1-applications/gallery.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/gallery.values.yaml
@@ -85,6 +85,7 @@ gallery-ui:
     enabled: true
     annotations:
       kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
         paths:
