--- a/argocd/apps/prod-k8s/1-applications/steamfitter.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/steamfitter.values.yaml
@@ -20,7 +20,7 @@ steamfitter-api:
       - secretName: <path:fortress-prod/data/shared#domain>-tls
         hosts:
          - <path:fortress-prod/data/shared#domain>
-  certificateMap: "appliance-root-ca"
+  certificateMap: "root-ca"
 
   
   env:
@@ -89,6 +89,7 @@ steamfitter-ui:
       nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
       nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
       nginx.ingress.kubernetes.io/use-regex: "true"
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
         paths:
