typo in cert-manager root-chain

--- a/argocd/install/cert-manager/kustomize/base/kustomization.yaml
+++ b/argocd/install/cert-manager/kustomize/base/kustomization.yaml
@@ -17,7 +17,7 @@ secretGenerator:
 configMapGenerator:
 - name: root-ca
   files:
-    - root-ca.crt=files/root-chain.crt
+    - root-ca.crt=files/root-chain.pem
     
 generatorOptions:
   disableNameSuffixHash: true
