set namespace for root-ca configMap

--- a/argocd/install/cert-manager/kustomize/base/kustomization.yaml
+++ b/argocd/install/cert-manager/kustomize/base/kustomization.yaml
@@ -16,6 +16,7 @@ secretGenerator:
     - tls.key=files/intermediate-ca.key
 configMapGenerator:
 - name: root-ca
+  namespace: default
   files:
     - root-ca.crt=files/root-chain.pem
     
