update postgres password #2

--- a/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
+++ b/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
@@ -22,9 +22,9 @@ global:
     ## @param global.postgresql.auth.existingSecret Name of existing secret to use for PostgreSQL credentials (overrides `auth.existingSecret`)
     ##
     auth:
-      postgresPassword: "<path:fortress-prod/data/postgresql#default-admin-pass>"
+      postgresPassword: "<path:fortress-prod/data/shared#crucible-admin-pass>"
       username: "postgres"
-      password: "<path:fortress-prod/data/postgresql#default-admin-pass>"
+      password: "<path:fortress-prod/data/shared#crucible-admin-pass>"
       database: "postgres"
       existingSecret: "postgresql"
     ## @param global.postgresql.service.ports.postgresql PostgreSQL service port (overrides `service.ports.postgresql`)
