--- a/argocd/apps/prod-k8s/1-applications/topomojo.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/topomojo.values.yaml
@@ -40,8 +40,8 @@ topomojo-api:
     # storage - either an existing pvc, the size for a new pvc, or emptyDir
   storage:
     size: 10G
-    mode: ReadWriteOnce
-    class: longhorn
+    mode: ReadWriteMany
+    class: "nfs"
 
   autoscaling:
     enabled: false
