--- a/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
+++ b/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
@@ -28,7 +28,7 @@ global:
     ## @param global.postgresql.auth.secretKeys.replicationPasswordKey Name of key in existing secret to use for PostgreSQL credentials (overrides `auth.secretKeys.replicationPasswordKey`). Only used when `global.postgresql.auth.existingSecret` is set.
     ##
     auth:
-      postgresPassword: "crucible"
+      postgresPassword: ""
       username: ""
       password: ""
       database: ""
@@ -133,7 +133,7 @@ auth:
   username: ""
   ## @param auth.password Password for the custom user to create. Ignored if `auth.existingSecret` is provided
   ##
-  password: ""
+  password: "crucible"
   ## @param auth.database Name for a custom database to create
   ##
   database: ""
